--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!doctype html>
 <html lang="zh-hans">
- <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minmum-scale=1.0">
-  <title>Document</title>
- </head>
- <body>
-  
- </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minmum-scale=1.0">
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <title>Document</title>
+</head>
+
+<body>
+
+</body>
+
 </html>
