为移动设备交图标

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body>
 
     <script src="js/jquery-2.1.4.js" />
+
+    <h1>d11d265 12</h1>
+    <h1>d8c453c 添加了 jquery-2.1.4</h1>
+    <h1>e21f9c6 添加了Bootstrap框架</h1>
 </body>
 
 </html>
