--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minmum-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Document</title>
 </head>
 
